Fix - alignment of footer when page is not long enough

--- a/css/base/body.scss
+++ b/css/base/body.scss
@@ -7,6 +7,8 @@ body {
     background: $color-black-03;
     min-height: 100vh;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 
     &.body--fixed {
         position: fixed;
