--- a/css/components/footer.scss
+++ b/css/components/footer.scss
@@ -1,4 +1,5 @@
 .vds-footer {
     color: $color-black-20;
     margin-bottom: 1.5rem;
+    margin-top: auto;
 }
